@startuml
' Định nghĩa hướng của sơ đồ
left to right direction

' Cấu hình hiển thị
skinparam roundcorner 20
skinparam class {
    BackgroundColor Snow
    ArrowColor SeaGreen
    BorderColor Black
}

entity "users" as users {
    *id : INT (PK)
    --
    *student_id : VARCHAR(20) <<UNIQUE>>
    *email : VARCHAR(180) <<UNIQUE>>
    *name : VARCHAR(255)
    *role : VARCHAR(50)
    gender : VARCHAR(50) <<NULLABLE>>
    *status : VARCHAR(50)
    class_id : VARCHAR(50) <<NULLABLE>>
    faculty : VARCHAR(255) <<NULLABLE>>
    contact_info : TEXT <<NULLABLE>>
    created_at : DATETIME <<NULLABLE>>
    updated_at : DATETIME <<NULLABLE>>
}

entity "activities" as activities {
    *id : INT (PK)
    --
    *title : VARCHAR(255)
    description : TEXT <<NULLABLE>>
    date : DATE <<NULLABLE>>
    time : TIME <<NULLABLE>>
    location : VARCHAR(255) <<NULLABLE>>
    created_by : INT (FK) <<users.id>>
    *status : VARCHAR(50)
    image : VARCHAR(255) <<NULLABLE>>
    *created_at : DATETIME
    *updated_at : DATETIME
}

entity "attendances" as attendances {
    *id : INT (PK)
    --
    *user_id : INT (FK) <<users.id>>
    *activity_id : INT (FK) <<activities.id>>
    *status : VARCHAR(50)
    remark : TEXT <<NULLABLE>>
    *marked_at : DATETIME
    *marked_by : INT (FK) <<users.id>>
}

entity "funds" as funds {
    *id : INT (PK)
    --
    *transaction_type : VARCHAR(255)
    *amount : DECIMAL(10,3)
    *date : DATE
    description : TEXT <<NULLABLE>>
    *created_by : INT (FK) <<users.id>>
    *created_at : DATETIME
    *updated_at : DATETIME
}

entity "proposals" as proposals {
    *id : INT (PK)
    --
    *user_id : INT (FK) <<users.id>>
    *type : VARCHAR(255)
    *content : TEXT
    proposed_changes : JSON <<NULLABLE>>
    *status : VARCHAR(255)
    *created_at : DATETIME
    *updated_at : DATETIME
}

entity "activity_participants" as activity_participants {
    *id : INT (PK)
    --
    *activity_id : INT (FK) <<activities.id>>
    *user_id : INT (FK) <<users.id>>
    *joined_at : DATETIME
    *status : VARCHAR(50)
}

' Mối quan hệ giữa các bảng

' users - activities (created_by)
users ||--o{ activities : "tạo"

' users - attendances (user_id và marked_by)
users ||--o{ attendances : "được điểm danh"
users ||--o{ attendances : "thực hiện điểm danh"

' activities - attendances (activity_id)
activities ||--o{ attendances : "có"

' users - funds (created_by)
users ||--o{ funds : "thực hiện"

' users - proposals (user_id)
users ||--o{ proposals : "gửi"

' activities - activity_participants (activity_id)
activities ||--o{ activity_participants : "có"

' users - activity_participants (user_id)
users ||--o{ activity_participants : "tham gia"

@enduml